Different popup component

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,8 @@
   --primary-col: white;
   --bg-hover-col: hsl(0, 1%, 20%);
   --secondary-col: rgb(206, 206, 206);
+
+  --student-width-for-desktop: 22rem;
 }
 
 
@@ -68,19 +70,6 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
 }
 
 
