--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,6 @@
 @tailwind utilities;
 
 
-:root {
-  --border-col: white;
-  --border-hover-col: #646cff; 
-  --primary-col: white;
-  --bg-hover-col: hsl(0, 1%, 20%);
-  --secondary-col: rgb(206, 206, 206);
-
-  --student-width-for-desktop: 22rem;
-}
-
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -21,8 +11,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -38,7 +26,7 @@ a:hover {
   color: #535bf2;
 }
 
-html, body {
+html, body, #root {
   height: 100%
 }
 
@@ -77,4 +65,33 @@ button:focus-visible {
 
 * {
   box-sizing: border-box;
+}
+
+:root { 
+  --border-col: white;
+  --border-hover-col: #646cff; 
+  --primary-col: white;
+  --bg-hover-col: hsl(0, 1%, 20%);
+  --secondary-col: rgb(206, 206, 206);
+  
+  --text-primary-col: white;
+  --text-secondary-col: rgb(206, 206, 206);
+  --text-disabled: hsl(0, 0%, 63%);
+
+  --theme-primary: #242424;
+  --theme-secondary: #303030;
+  --theme-tertiary: #404040;
+
+  --student-width-for-desktop: 22rem;
+}
+
+body {
+  background-color: var(--theme-primary);
+}
+#sidebar {
+  background-color: var(--theme-secondary)
+}
+
+.noscrollbar {
+  scrollbar-width:none;
 }
