--- a/src/index.css
+++ b/src/index.css
@@ -81,17 +81,34 @@ button:focus-visible {
   --theme-primary: #242424;
   --theme-secondary: #303030;
   --theme-tertiary: #404040;
+  --theme-quad: #1f1e1e;
 
   --student-width-for-desktop: 22rem;
 }
 
-body {
-  background-color: var(--theme-primary);
+
+@layer base {
+  body {
+    @apply bg-[--theme-primary]
+  }
 }
-#sidebar {
+/* #sidebar {
   background-color: var(--theme-secondary)
-}
+} */
 
 .noscrollbar {
   scrollbar-width:none;
+}
+
+
+@layer components {
+  .threeDots {
+    @apply w-5 h-5 md:w-7 md:h-7;
+    background-image: radial-gradient(circle, white 1px, transparent 2px);
+    background-size: 100% 33.3%;
+    background-repeat: repeat;
+  }
+  .noLink {
+    @apply text-inherit hover:text-inherit font-normal
+  }
 }
