--- a/src/index.css
+++ b/src/index.css
@@ -106,13 +106,25 @@ button:focus-visible {
   .noLink {
     @apply text-inherit hover:text-inherit font-normal
   }
-  .title {
-    @apply font-semibold text-2xl sm:text-3xl md:text-4xl inline-block p-2
+  .title-100 {
+    @apply font-bold text-3xl  md:text-4xl inline-block
+  }
+  .title-200 {
+    @apply font-semibold text-xl md:text-2xl inline-block
+  }
+  .title-300 {
+    @apply font-bold
   }
   .studentLayout {
     @apply grid sm:grid-cols-2 lg:grid-cols-3 gap-2
   }
-  
+  .offwhite {
+    @apply text-[#aaa]
+  }
+  .classGrid {
+    @apply grid overflow-hidden gap-x-2 gap-y-4 grid-cols-2 
+      auto-rows-[minmax(220px,auto)] lg:auto-rows-[minmax(250px,auto)]
+  }
 }
 
 @layer utilities {
